--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/auth": "^21.13.0",
+    "@react-native-firebase/database": "^21.13.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.9.0",
+    "@react-navigation/native": "^7.1.4",
+    "@react-navigation/native-stack": "^7.3.8",
+    "@react-navigation/stack": "^7.2.8",
+    "axios": "^1.8.4",
     "expo": "~52.0.42",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.0",
     "react": "18.3.1",
-    "react-native": "0.76.8"
+    "react-dom": "18.3.1",
+    "react-native": "^0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
