--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
-    "@react-native-firebase/app": "^21.13.0",
-    "@react-native-firebase/auth": "^21.13.0",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/database": "^21.13.0",
+    "@react-native-firebase/firestore": "^21.14.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^7.1.4",
